Fixed menu button when on mobile

--- a/assets/css/screen-adjust.css
+++ b/assets/css/screen-adjust.css
@@ -29,9 +29,6 @@
         color: var(--magenta-accent);
         cursor: pointer;
     }
-    .dropdown:hover .drop-content{
-        display: block;
-    }
     .navbar ul{
         display: none;
     }
